--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,22 +1,34 @@
 version: 2
 
 builds:
-  - main: ./cmd/claws
+  # Main build (Linux/Darwin)
+  - id: main
+    main: ./cmd/claws
     binary: claws
     env:
       - CGO_ENABLED=0
     goos:
       - linux
       - darwin
-      - windows
     goarch:
       - amd64
       - arm64
-    ignore:
-      - goos: windows
-        goarch: arm64
     ldflags:
       - -s -w -X main.version={{.Version}}
+
+  # Windows build (skip for prereleases)
+  - id: windows
+    main: ./cmd/claws
+    binary: claws
+    env:
+      - CGO_ENABLED=0
+    goos:
+      - windows
+    goarch:
+      - amd64
+    ldflags:
+      - -s -w -X main.version={{.Version}}
+    skip: '{{ ne .Prerelease "" }}'
 
 archives:
   - formats: [tar.gz]
@@ -35,8 +47,12 @@ changelog:
       - '^docs:'
       - '^test:'
 
+release:
+  prerelease: auto
+
 homebrew_casks:
-  - repository:
+  - skip_upload: auto
+    repository:
       owner: clawscli
       name: homebrew-tap
       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
