--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -38,7 +38,7 @@ tasks:
   localstack:start:
     desc: Start LocalStack container
     cmds:
-      - docker start {{.LOCALSTACK_CONTAINER}} 2>/dev/null || docker run -d --name {{.LOCALSTACK_CONTAINER}} -p 4566:4566 localstack/localstack
+      - docker start {{.LOCALSTACK_CONTAINER}} 2>/dev/null || docker run -d --name {{.LOCALSTACK_CONTAINER}} -p 4566:4566 localstack/localstack:4.12.0
       - |
         echo "Waiting for LocalStack to be ready..."
         for i in $(seq 1 30); do
@@ -99,7 +99,7 @@ tasks:
           -e AWS_SECRET_ACCESS_KEY=test \
           -e AWS_DEFAULT_REGION=us-east-1 \
           -e AWS_EC2_METADATA_DISABLED=true \
-          ghcr.io/charmbracelet/vhs cassette.tape
+          ghcr.io/charmbracelet/vhs:0.10.0 cassette.tape
 
   test-localstack:
     desc: Run integration tests with LocalStack
