chore: setup golangci-lint for CI and local development
- Add .golangci.yml configuration with standard linters enabled

- Update Taskfile.yml to use golangci-lint instead of go vet

- Update CI workflow to use golangci-lint-action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,16 +25,11 @@ jobs:
       - name: Build
         run: go build ./...
 
-      - name: Vet
-        run: go vet ./...
+      - name: Lint
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: v1.62
+          args: --timeout=5m
 
       - name: Test
         run: go test ./...
-
-      - name: Check formatting
-        run: |
-          if [ -n "$(gofmt -l .)" ]; then
-            echo "Code is not formatted. Run 'gofmt -w .'"
-            gofmt -l .
-            exit 1
-          fi
