feat: add gen-imports tool to automate resource registration
- Add internal/genimports package for scanning custom resources
- Add scripts/gen-imports for CLI execution
- Update Taskfile with gen-imports task
- Update docs/adding-resources.md to reflect new workflow
- Implements part of #34 (focusing on registration automation)

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -62,3 +62,4 @@ linters-settings:
       - G115  # int->int32 conversion - pageSize always < 1000
       - G301  # Directory permissions - test only
       - G101  # Hardcoded credentials - test examples only
+      - G306  # WriteFile permissions 0644 - standard for generated Go source
