feat(config): add input validation, use maps.Copy, cleanup deps
- Add IsValidRegion/AccountID/ProfileName validation functions
- Add ValidationError type and comprehensive tests (44 cases)
- Replace manual map copy loops with maps.Copy
- Add test-race task to Taskfile.yml
- Remove unused indirect dependencies via go mod tidy

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -28,6 +28,11 @@ tasks:
     cmds:
       - go test ./...
 
+  test-race:
+    desc: Run tests with race detector (requires CGO and C compiler)
+    cmds:
+      - CGO_ENABLED=1 go test -race ./...
+
   test-cover:
     desc: Run tests with coverage report
     cmds:
