--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,7 @@ updates:
       aws-sdk:
         patterns:
           - "github.com/aws/aws-sdk-go-v2*"
+          - "github.com/aws/smithy-go"
       charm:
         patterns:
           - "charm.land/*"
