Fix PR review feedback
- Add missing Require assertion after :ec2/ navigation
- Add LocalStack cleanup step to CI workflow

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -75,3 +75,7 @@ jobs:
           name: vhs-screenshots
           path: docs/images/
           retention-days: 7
+
+      - name: Cleanup LocalStack
+        if: always()
+        run: docker stop localstack || true
