Address PR review feedback
- Update docs/tapes/README.md with new tapes and test:vhs task
- Add timeout-minutes: 5 to demo setup step

--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -45,6 +45,7 @@ jobs:
           exit 1
 
       - name: Setup demo data
+        timeout-minutes: 5
         run: ./scripts/localstack-demo-setup.sh
 
       - name: Create AWS config for demo
